fixed alignment of footer

--- a/static_version/src/App.css
+++ b/static_version/src/App.css
@@ -23,6 +23,12 @@
   color: #61dafb;
 }
 
+html,
+body,
+#app,
+#app > div {
+  height: 100%;
+}
 .Jumbotron-title {
   /* color: rgb(91, 58, 236); */
   color: white;
